[gd_scene load_steps=9 format=2]

[ext_resource path="res://screens/bear-village.gd" type="Script" id=1]
[ext_resource path="res://screens/bear-village/images/background.png" type="Texture" id=2]
[ext_resource path="res://screens/bear-village/images/tree.png" type="Texture" id=3]
[ext_resource path="res://common/ui/playerAndControl.tscn" type="PackedScene" id=4]
[ext_resource path="res://screens/bear-village/assets/ballhouse.tscn" type="PackedScene" id=5]
[ext_resource path="res://common/areas/door.tscn" type="PackedScene" id=6]

[sub_resource type="TileSet" id=1]
0/name = "background.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "tree.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 160, 256 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="bear-village" type="Node2D"]
script = ExtResource( 1 )

[node name="cameraRef" type="ReferenceRect" parent="."]
margin_left = -104.0
margin_right = 1060.0
margin_bottom = 814.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 96, 96 )
format = 1
tile_data = PoolIntArray( -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0 )

[node name="treeTop" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( -262145, 0, 0, -131075, 0, 0, -196608, 0, 0, -196605, 0, 0, -196602, 0, 0, -196599, 0, 0, -196596, 0, 0, -196593, 0, 0, -5, 0, 0, -2, 0, 0, -65535, 0, 0, -65532, 0, 0, -65528, 0, 0, -65525, 0, 0, -65523, 0, 0, 6, 0, 0, 15, 0, 0, 65546, 0, 0, 65548, 0, 0, 196603, 0, 0, 131086, 0, 0 )

[node name="treeBottom" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 262141, 0, 0, 393212, 0, 0, 458750, 0, 0, 524284, 0, 0, 589822, 0, 0, 720892, 0, 0, 655360, 0, 0, 655364, 0, 0, 655369, 0, 0, 655373, 0, 0, 786430, 0, 0, 720899, 0, 0, 720902, 0, 0, 720906, 0, 0, 720910, 0, 0, 786433, 0, 0, 786440, 0, 0, 786444, 0, 0 )

[node name="YSort" type="YSort" parent="."]

[node name="playerAndControl" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 964.88, 427.121 )

[node name="bevil-room" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 105.946, 262.747 )

[node name="bee-room" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 344.015, 361.588 )

[node name="shop" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 842.935, 402.186 )

[node name="gotToMacro" parent="." instance=ExtResource( 6 )]
position = Vector2( 1024.87, 359.783 )
scale = Vector2( 4.8604, 72.4955 )

[connection signal="playerEntered" from="YSort/bevil-room" to="." method="_on_bevilroom_playerEntered"]
[connection signal="playerEntered" from="YSort/bee-room" to="." method="_on_beeroom_playerEntered"]
[connection signal="playerEntered" from="YSort/shop" to="." method="_on_shop_playerEntered"]
[connection signal="playerOpenedDoor" from="gotToMacro" to="." method="_on_gotToMacro_playerOpenedDoor"]
